--- a/home.css
+++ b/home.css
@@ -13,6 +13,23 @@ body {
     font-family: sans-serif;
 }
 
+body::-webkit-scrollbar {
+    width: 0.6rem;
+    border-radius: 5px;
+    background: transparent;
+}
+
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background: #fff;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: darkgrey;
+    outline: none
+}
+
 ul {
     list-style: none;
 }
@@ -453,8 +470,8 @@ img, span {
 }
 
 .card-image .thumb .image img {
-    width: 300px;
-    height: 300px;
+    width: 280px;
+    height: 280px;
     border-radius: 5px;
     object-fit: cover;
 }
@@ -470,7 +487,7 @@ img, span {
 
 .media {
     display: flex;
-    padding: 10px 10px 10px 0;
+    padding: 10px;
     border-radius: 5px;
     user-select: none;
 }
@@ -530,6 +547,9 @@ img, span {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
 }
 
 .zm-action {
@@ -550,7 +570,7 @@ img, span {
     align-items: center;
 }
 
-.overlay {
+.activeSong {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -558,7 +578,7 @@ img, span {
     transition: background .3s ease;
 }
 
-.song-thumb:hover .overlay {
+.overlay-bg {
     background: rgba(0, 0, 0, 0.3);
 }
 
@@ -1036,17 +1056,9 @@ img, span {
     filter: brightness(.7);
 }
 
-.active:hover i {
-    color: #6e8ffb;
-}
-
 .carousel-wrap .carousel-item .card-content .active:hover {
     border: 1px solid #6e8ffb;
 }
-
-.active:hover span {
-    color: #6e8ffb;
-} 
 
 .addColor {
     color: #3460f5;
@@ -1069,7 +1081,13 @@ img, span {
     pointer-events: none;
 }
 
-.hide-right.media-item.active {
+.song-item.active {
     background: hsla(0,0%,100%,0.15);
+    border-radius: 5px;
+}
+
+.song-item:hover {
+    background: hsla(0,0%,100%,0.15);
+    border-radius: 5px;
 }
 /* END SINGER */
