--- a/home.css
+++ b/home.css
@@ -1104,3 +1104,145 @@ img, span {
     border-radius: 5px;
 }
 /* END SINGER */
+
+
+/* MODAL */
+.portal-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.portal-modal.modal-overlay {
+    background: rgba(0,0,0,0.5);
+}
+
+.portal-modal .modal {
+    background-color: #333;
+    border-radius: 8px;
+    max-height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    position: fixed;
+    z-index: 40;
+}
+
+.portal-modal .modal .modal-content {
+    width: 70vw;
+    max-width: 900px;
+    padding-bottom: 20px;
+}
+
+.portal-modal .modal .modal-content .btn {
+    font-size: 14px;
+    border-radius: 999px;
+    line-height: normal;
+    border: 0;
+    display: inline-block;
+    font-weight: 400;
+    text-transform: none;
+    text-align: center;
+    cursor: pointer;
+}
+
+.portal-modal .modal .modal-content .btn.btn-close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    margin: 0;
+}
+
+.portal-modal .modal .modal-content h3 {
+    font-size: 2.4rem;
+    padding: 20px 30px;
+    color: #fff;
+}
+
+.container {
+    flex-grow: 1;
+    margin: 0 auto;
+    position: relative;
+    width: 100%;
+}
+
+.portal-modal .modal .modal-content .container {
+    max-height: 50vh;
+    min-height: 500px;
+    padding: 0 30px;
+    overflow-y: scroll;
+}
+
+.portal-modal .modal .modal-content .container .title {
+    font-size: 1.8rem;
+    color: #fff;
+    margin-bottom: 10px;
+    padding: unset;
+}
+
+.portal-modal .modal .modal-content .container .columns {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.portal-modal .modal .modal-content .container .column {
+    margin-bottom: 20px;
+}
+
+.card-img {
+    border: 1px solid transparent;
+    display: block;
+    position: relative;
+    overflow: hidden;
+    border-radius: 4px;
+}
+
+.card-img figure {
+    line-height: 0;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.card .card-content {
+    padding: 5px 0;
+}
+
+.card .card-content .title {
+    color: #fff;
+    font-size: 1.2rem;
+}
+
+.card1 {
+    background: url('./images/london.png') no-repeat 50%;
+}
+
+.card2 {
+    background: url('./images/light-dark.jpg') no-repeat 50%;
+}
+
+.card3 {
+    background: url('./images/dynamic-blue.jpg') no-repeat 50%;
+}
+
+.card4 {
+    background: url('./images/dynamic-brown.jpg') no-repeat 50%;
+}
+
+.card5 {
+    background: url('./images/dynamic-pink.jpg') no-repeat 50%;
+}
+
+.card .card-thumb {
+    padding-top: 67%;
+    width: 125px;
+    height: 83px;
+}
+/* END MODAL */
