--- a/khampha.css
+++ b/khampha.css
@@ -1,6 +1,5 @@
 .main-page {
     position: relative;
-    /* width: calc(100% - 570px); */
     min-height: 100%;
     flex-grow: 1;
     margin-right: 330px;
@@ -16,11 +15,6 @@
 
 .zm-section>.container {
     min-height: calc(100% - 158px);
-    margin-top: 70px;
-}
-
-.gallery {
-    padding-top: 32px;
 }
 
 .gallery-container {
@@ -31,71 +25,10 @@
     position: relative;
     transform-style: preserve-3d;
     perspective: 1000px;
-    margin: 0 -15px 20px;
-}
-.gallery-item {
-    position: absolute;
-    height: auto;
-    transition: transform .5s ease-in-out,opacity .5s ease-in-out,z-index 0s linear .25s;
-    width: 33.33%;
-    z-index: 0;
-    border-radius: 8px;
-    padding: 0 15px;
-}
-
-.zm-gallery-prev {
-    left: 0;
-    position: absolute;
-    height: 100%;
-    z-index: 10;
-    cursor: pointer;
-}
-.btn.btn-prev {
-    left: 25px;
-}
-.btn.btn-prev, .btn.btn-next {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 55px;
-    height: 55px;
-    border-radius: 50%;
-    transform: translateY(-50%);
-    top: 50%;
-    right: 25px;
-    background-color: hsla(0,0%,100%,.15);
-    box-shadow: 0 2px 4px 0 rgb(226 102 102 / 15%);
-    opacity: 0;
-    position: absolute;
-    text-align: center;
-    padding: 0;
-    border: 0;
-    cursor: pointer;
-}
-
-.zm-gallery-last {
-    right: 0;
-    position: absolute;
-    height: 100%;
-    z-index: 10;
-    cursor: pointer;
-}
-
-.zm-card {
-    position: relative;
-    max-width: 100%;
-}
-
-.zm-card .zm-card-image figure {
-    height: 0;
-    padding-bottom: 56.25%;
-    line-height: 0;
-    border-radius: 5px;
-    overflow: hidden;
 }
 
 .slide {
-    width: 278px;
+    /* width: 278px; */
     padding-top: 56%;
 }
 
@@ -127,4 +60,27 @@
 .slide6 {
     background: url('./images/slide6.jpg') center no-repeat;
     background-size: cover;
+}
+
+.owl-next {
+    right: 10px;
+}
+
+.owl-prev {
+    left: 10px;
+}
+
+.owl-prev, .owl-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #869791 !important;
+    margin: 0 !important;
+}
+.owl-prev i, .owl-next i {
+    color: #fff;
+    font-size: 1.4rem;
 }
