--- a/home.css
+++ b/home.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -10,18 +11,20 @@ html {
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 .modal-content .container::-webkit-scrollbar {
     width: 6px;
 }
 
-body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background: #fff;
+body::-webkit-scrollbar {
+    width: 6px;
 }
-
+body::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    box-shadow: inset 0 0 6px rgb(0 0 0 / 50%);
+}
 .modal-content .container::-webkit-scrollbar-thumb {
     border-radius: 4px;
     box-shadow: inset 0 0 6px rgb(0 0 0 / 50%);
